--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.o
 *.so
 
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
@@ -36,3 +37,4 @@
 ehthumbs.db
 Thumbs.db
 .vscode
+.dSYM
